--- a/WebContent/listaactivos.xhtml
+++ b/WebContent/listaactivos.xhtml
@@ -32,7 +32,7 @@
 
 									<p:fieldset legend="Acciones">
 										<h:panelGrid columns="3" cellpadding="5">
-													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, panelBuscar, activos" actionListener="#{GestorListaActivos.limpiarPlantilla}" />
+													<p:commandButton value="Limpiar Plantilla" update="msgs, popup, COACES, panelBuscar, activos" actionListener="#{GestorListaActivos.limpiarPlantilla}" />
 													<p:commandButton value="Buscar" update="msgs, popup, activos" actionListener="#{GestorListaActivos.buscaActivos}"/>
 													<p:commandButton value="Detalles" update="form:popup" actionListener="#{GestorListaActivos.cargarDetalles}" />
 										</h:panelGrid>
