PPv09d-b20140214-r1 Implementación Parcial: R1,R2 y R4

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -37,8 +37,7 @@
 								url="listaprovisiones.xhtml" icon="ui-icon-search" />
 						</p:submenu>
 
-						<p:submenu label="Comunidades">
-							<p:submenu label="Comunidades" icon="ui-icon-home">
+							<p:submenu label="Comunidades">
 								<p:menuitem value="Registrar"
 									url="registracomunidad.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Gestionar Activos"
@@ -50,8 +49,8 @@
 								<p:menuitem value="Errores"
 									url="errorescomunidades.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
-							
-							<p:submenu label="Cuotas" icon="ui-icon-calculator">
+
+							<p:submenu label="Cuotas">
 								<p:menuitem value="Registrar"
 									url="registracuota.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
@@ -60,7 +59,7 @@
 									url="errorescuotas.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
 							
-							<p:submenu label="Referencias catastrales" icon="ui-icon-script">
+							<p:submenu label="Referencias catastrales">
 								<p:menuitem value="Registrar"
 									url="registrareferencia.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
@@ -68,7 +67,7 @@
 								<p:menuitem value="Errores"
 									url="erroresferencias.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
-							<p:submenu label="Impuestos y tasas" icon="ui-icon-note">
+							<p:submenu label="Impuestos y tasas">
 								<p:menuitem value="Registrar"
 									url="registraimpuesto.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
@@ -76,7 +75,7 @@
 								<p:menuitem value="Errores"
 									url="erroresimpuestos.xhtml" icon="ui-icon-alert" />
 							</p:submenu>
-						</p:submenu>
+
 						<p:submenu label="Archivos">
 							<p:menuitem value="Recepción"
 								url="recepcion.xhtml" icon="ui-icon-arrowthick-1-n" />
