--- a/WebContent/registracomunidad.xhtml
+++ b/WebContent/registracomunidad.xhtml
@@ -15,9 +15,6 @@
 		<h:form id="form">
 			<p:layout fullPage="true">
 
-<style type="text/css">
-.ui-expand { width: 100%;overflow-y: scroll;}
-</style>
 
 				<p:layoutUnit position="north" size="auto" header="Registrar Comunidad">
 					<h:panelGrid columns="4" cellpadding="5">
@@ -58,6 +55,7 @@
 							<h:panelGrid columns="2" cellpadding="5">
 
 								<p:commandButton value="Mostrar" onclick="barraInfo.show()" type="button"/>
+								<p:commandButton value="Notas" onclick="dlgNotas.show()" type="button"/>
 
 								<p:notificationBar position="top" effect="slide" widgetVar="barraInfo" styleClass="top" style="height: auto">
 									<h:panelGrid columns="2" cellpadding="5">
@@ -73,28 +71,11 @@
 						</p:fieldset>
 
 					</h:panelGrid>
+
 				</p:layoutUnit>
 
 				<p:layoutUnit position="west" size="20%" header="Operativas">
 					<ui:include src="menu.xhtml"/>
-				</p:layoutUnit>
-
-				<p:layoutUnit position="east" size="25%" header="Notas">  
-					<h:panelGrid columns="1" cellpadding="1">
-						<p:panel>
-							<h:panelGrid columns="2" cellpadding="5">
-
-								<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorComunidades.limpiarNota}"/>
-
-							</h:panelGrid>
-						</p:panel>
-
-						<h:panelGrid columns="1" cellpadding="5">
-							<h:outputText id="counternota"/>
-							<p:inputTextarea id="NOTA" value="#{GestorComunidades.sNota}" cols="200" rows="10" counter="counternota" maxlength="500"
-								counterTemplate="{0} carácteres restantes." autoResize="false" styleClass="ui-expand"/>
-						</h:panelGrid>
-					</h:panelGrid>
 				</p:layoutUnit>
 
 				<p:layoutUnit position="center">
@@ -214,6 +195,24 @@
 							</h:panelGrid>
 						</p:panel>
 					</h:panelGrid>
+
+					<p:dialog header="Notas:" widgetVar="dlgNotas" resizable="false">
+					<h:panelGrid columns="1" cellpadding="1">
+						<p:panel>
+							<h:panelGrid columns="2" cellpadding="5">
+
+								<p:commandButton value="Limpiar" update="NOTA" actionListener="#{GestorComunidades.limpiarNota}"/>
+
+							</h:panelGrid>
+						</p:panel>
+
+						<h:panelGrid columns="1" cellpadding="5">
+							<h:outputText id="counternota"/>
+							<p:inputTextarea id="NOTA" value="#{GestorComunidades.sNota}" cols="40" rows="10" counter="counternota" maxlength="500"
+								counterTemplate="{0} carácteres restantes." autoResize="false"/>
+						</h:panelGrid>
+					</h:panelGrid>
+					</p:dialog>
 
 					<p:dialog header="Activos sin Comunidad:" widgetVar="dlgTabla" resizable="false">
 						<p:contextMenu for="activos">
