PPv09d-b20140218-r1 Corregidos varios bugs visuales y de consulta.

--- a/WebContent/menu.xhtml
+++ b/WebContent/menu.xhtml
@@ -38,6 +38,8 @@
 						</p:submenu>
 
 							<p:submenu label="Comunidades">
+								<p:menuitem value="Lista de Comunidades" 
+									url="listacomunidades.xhtml" icon="ui-icon-search" />
 								<p:menuitem value="Registrar"
 									url="registracomunidad.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Gestionar Activos"
@@ -60,6 +62,8 @@
 							</p:submenu>
 							
 							<p:submenu label="Referencias catastrales">
+								<p:menuitem value="Lista de Referencias Catastrales" 
+									url="listareferencias.xhtml" icon="ui-icon-search" />
 								<p:menuitem value="Registrar"
 									url="registrareferencia.xhtml" icon="ui-icon-arrowthick-1-e" />
 								<p:menuitem value="Movimientos"
