--- a/WebContent/movimientosreferencias.xhtml
+++ b/WebContent/movimientosreferencias.xhtml
@@ -92,7 +92,7 @@
 											<h:panelGrid columns="3" cellpadding="5">
 
 												<h:outputText for="COACES" value="Código de activo: " />
-												<p:inputText id="COACES" value="#{GestorMovimientosReferenciasCatastrales.sCOACES}" size="9" maxlength="9"/>
+												<p:inputMask id="COACES" value="#{GestorMovimientosReferenciasCatastrales.sCOACES}" mask="9?99999999" placeHolder=" " size="9" maxlength="9"/>
 
 												<p:commandButton value="Carga Referencias" update="msgs, popup, panel, referencias" actionListener="#{GestorMovimientosReferenciasCatastrales.cargarReferencias}"  oncomplete="dlgTablaReferencias.show()"/>
 
