--- a/WebContent/gestioncuentascomunidad.xhtml
+++ b/WebContent/gestioncuentascomunidad.xhtml
@@ -103,7 +103,7 @@
 												<h:outputText for="NUDCOM" value="Número: " />
 												<p:inputText id="NUDCOM" value="#{GestorCuentasComunidades.sNUDCOM}" size="10" maxlength="10"/>
 
-												<p:commandButton value="Cargar" update="cuentas, panelComunidad, msgs, popup" actionListener="#{GestorCuentasComunidades.cargarComunidad}" />
+												<p:commandButton value="Cargar" update="cuentas, msgs, popup, panel" actionListener="#{GestorCuentasComunidades.cargarComunidad}" />
 
 											</h:panelGrid>
 									  </p:panel>
